# julianprbot

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  julian-project.xmind  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
bot/: __init__.py  __main__.py  misc.py  utils.py
bot/commands/: __init__.py  bot_commands.py  callback_data_factories.py  callback_data_states.py  help.py  settings.py  start.py
bot/commands/structures/: __init__.py  cancel_board.py
bot/db/: __init__.py  base.py  channel.py  engine.py  post.py  post_channel.py  url.py  user.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 2c7b4c882530_init.py  342baa79f745_1_0_0.py  37b62bde14bf_fix.py  4089deba8fcc_fsm.py  4d6e9bca4b81_new.py  c1ece687bbda_test.py  ccd57be61359_initial_check.py  e0cca1fdbba3_.py  e226d18a7453_.py
bot/db/types/: url.py
bot/handlers/: __init__.py  create_post.py  get_post.py  help.py  start.py  web_app_data.py
bot/middlewares/: register_check.py
bot/structures/: __init__.py  fsm_groups.py
bot/structures/callback_data_factories/: __init__.py  post_data.py
bot/structures/keyboards/: __init__.py  cancel_board.py  menu_board.py  posts_board.py  posts_keyboard.py  prtype_board.py
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/ru/LC_MESSAGES/: messages.mo  messages.po
locales/uk/LC_MESSAGES/: messages.mo  messages.po
tests/: conftest.py  mocked_bot.py  utils.py
tests/test_handlers/: test_start.py  test_start_integr.py
